--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-google-maps/api": "^2.19.3",
     "@supabase/supabase-js": "^2.42.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "formik": "^2.4.5",
     "lucide-react": "^0.367.0",
-    "next": "14.1.4",
+    "next": "^14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
